SDKs/microsoft.com/cognitiveservices-Training/2.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateImagesFromDataRequest{
        PathParams: operations.CreateImagesFromDataPathParams{
            ProjectID: "itaque",
        },
        QueryParams: operations.CreateImagesFromDataQueryParams{
            TagIds: []string{
                "minus",
                "est",
            },
        },
        Headers: operations.CreateImagesFromDataHeaders{
            TrainingKey: "earum",
        },
        Request: operations.CreateImagesFromDataRequestBody{
            ImageData: operations.CreateImagesFromDataRequestBodyImageData{
                Content: []byte("quos"),
                ImageData: "id",
            },
        },
    }
    
    res, err := s.Sdk.CreateImagesFromData(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.ImageCreateSummary != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateImagesFromData` - Add the provided images to the set of training images
* `CreateProject` - Create a project
* `CreateTag` - Create a tag for the project
* `DeleteImageRegions` - Delete a set of image regions
* `DeleteImageTags` - Remove a set of tags from a set of images
* `DeleteImages` - Delete images from the set of training images
* `DeleteIteration` - Delete a specific iteration of a project
* `DeletePrediction` - Delete a set of predicted images and their associated prediction results
* `DeleteProject` - Delete a specific project
* `DeleteTag` - Delete a tag from the project
* `ExportIteration` - Export a trained iteration
* `GetDomain` - Get information about a specific domain
* `GetDomains` - Get a list of the available domains
* `GetExports` - Get the list of exports for a specific iteration
* `GetImagePerformanceCount` - Gets the number of images tagged with the provided {tagIds} that have prediction results from
training for the provided iteration {iterationId}
* `GetImagePerformances` - Get image with its prediction for a given project iteration
* `GetImageRegionProposals` - Get region proposals for an image. Returns empty array if no proposals are found.
* `GetImagesByIds` - Get images by id for a given project iteration
* `GetIteration` - Get a specific iteration
* `GetIterationPerformance` - Get detailed performance information about an iteration
* `GetIterations` - Get iterations for the project
* `GetProject` - Get a specific project
* `GetProjects` - Get your projects
* `GetTag` - Get information about a specific tag
* `GetTaggedImageCount` - Gets the number of images tagged with the provided {tagIds}
* `GetTaggedImages` - Get tagged images for a given project iteration
* `GetTags` - Get the tags for a given project and iteration
* `GetUntaggedImageCount` - Gets the number of untagged images
* `GetUntaggedImages` - Get untagged images for a given project iteration
* `QuickTestImage` - Quick test an image
* `QuickTestImageURL` - Quick test an image url
* `TrainProject` - Queues project for training
* `UpdateIteration` - Update a specific iteration
* `UpdateProject` - Update a specific project
* `UpdateTag` - Update a tag

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
